tips-trix/tips-styles.css
/* Hide hamburger link that should open and close the nav on small screens */
.nav .icon {
  display: none;
  color:black
}
/* BASIC STYLES */
/* Add a black background color to the top navigation */
.nav {
  background-color:black;
  overflow: hidden;
}
/* Style the links inside the navigation bar */
.nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
.nav li {
  float: left;
}
.nav li a {
  display: flex;
  flex-direction: column;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}
/* Change the color of links on hover */
.nav li:hover {
  background-color: #ddd;
  color: black;
}
/* Add an active class to highlight the current page */
.active {
  background-color:rgb(255,255,255);
}
/* Hide the link that should open and close the topnav on small screens */
.nav .icon {
  display: none;
}
/* The navigation bar */
.nav {
  overflow: hidden;
  background-color: rgb(255,255,255);
  top: 0; /* Position the navbar at the top of the page */
  width: 100%; /* Full width */
  display: flex;
  flex-direction: row;
  justify-content: center;
}
/* Links inside the navbar */
.nav li a {
  display: flex;
  flex-direction: column;
  color: #666666;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  cursor: pointer;
  height: auto;
  position: relative;
  z-index: 1;
}
/* Change background on mouse-over */
.nav li a:hover {
  background: #ddd;
  color: black;
}
/* Dropdown Toggle for Nav Bar (2 total) */
/* The container <div> - needed to position the dropdown content */
.dropdown {
  display: flex;
  flex-direction: column;
}
/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1000;
  list-style: none;
  top: 46px;
  opacity: 0.8;
}
/* Links inside the dropdown */
.dropdown-content li a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: flex;
  flex-direction: column;
  cursor: pointer;
}
.nav li a:hover{
  border-bottom: 2px solid black;
}
/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content{
  display: flex;
  flex-direction: column;
}

/* Main Content */
main {
  margin-top: 100px; /* Add top margin to avoid content overlay */
  width: 70%;
  padding-left: 10%;
  padding-right: 10%;
  display: grid;
  grid-template-columns: 70% 30%;
  grid-template-rows: repeat(20 100px);
  column-gap: 5%;
}

.posts{
  grid-column: 1/2;
  grid-row: 1/2;
}

.info{
  grid-column: 2/3;
  grid-row: 1/2;
}

.archive{
  grid-column: 2/3;
  grid-row: 3/4;
}

.categories{
  grid-column: 2/3;
  grid-row: 4/5;
}

.social1{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.post-cont1{
  display: flex;
  flex-direction: column;
}

.social-links1{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}
.tips-pic1{
  width: 50%;
  height: auto;
}



 /* Footer */

 footer{
  background-color: rgb(43,43,43);
}

footer p{
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 4%;
}



@media screen and (max-width: 600px) {
  .nav ul li:not(:first-child) {
    display: none;
  }
  .nav ul li.icon {
    float: right;
    display: block;
  }
  .nav.responsive {
    position: relative;
  }
  .nav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .nav.responsive ul li {
    float: none;
    display: block;
    text-align: left;
  }
  .dropdown:hover .dropdown-content{
    display: flex;
    flex-direction: column;
    position: relative; 
  }
}

